package org.example.grpc;

message Proposal {
  required string stringRequest = 1;
}

message Response {
  required string stringResponse = 1;
}

message Infos {
  required int32 id = 1;
  required int32 district = 2;
  required int32 grpcPort = 3;
  repeated int32 position = 4;
  required bool isRecharging = 5;
  required bool isRiding = 6;
  required double battery = 7;
}

message Goodbye {
  required int32 grpcPort = 1;
}

message RideCharge {
  required int32 id = 1;
  required double distanceToTaxi = 2;
}

service IPCService {
  rpc present(Infos) returns (Response);
  rpc coordinate(RideCharge) returns (RideCharge);
  rpc goodbye(Goodbye) returns (Response);
}